# tool_academic-graph

./: .gitignore  Makefile  README.md  db.go  fileReader.go  files.go  go.mod  go.sum  json.go  main.go  pyproject.toml  works.go
citation-extractor/: json.go  main.go
database_handler/: createDatabase.py  createGraph.py  create_Neo4J.py  create_SQLite.py
extractor/: files.go  json.go  main.go  types.go
extractors/: files.go  go.mod  go.sum  json.go  main.go
go/: Makefile  go.work  pipeline.bash
go/citation-extractor/: files.go  go.mod  go.sum  json.go  main.go  types.go
go/document-extractor/: go.mod  json.go  main.go  types.go
go/graphML_generator/: go.sum  main.go
go/map_OAID_DOI/: go.mod  json.go  main.go  (+1 more)
graphML/: db.go  files.go  go.mod  graphML.go  main.go  types.go
graphML-generator/: go.mod
graphML_generator/: go.mod  graphML.go  main.go  types.go
massive-index-go/: go.work  go.work.sum
oa_extractor/: go.mod  go.sum
oa_graph/: main.py
oag/: __init__.py  createDatabase.py  createGraph.py  createGraphML.py  createNodes.go  extractCitations.py  extractWorks.py  main.py
python/: Makefile  pyproject.toml
python/database_handler/: __init__.py  create_Neo4J.py  create_SQLite.py
python/src/: authors.py  authorshipRelationship.py  citesRelationship.py  create_SQLite.py  db.py  shell.py  sqlite3.py  works.py
scripts/: compress.bash  createCompressedGML.bash  createCompressedNeo4JDump.bash  loadNeo4JDump.bash  run_ag-ce.bash  run_ag-de.bash  run_ag-odm.bash
src/: extractData.py  main.py
works/: files.go  go.mod  go.sum  main.go
(+101 files in other folders)
