[tool.poetry]
name = "database-handler"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}
click = "^8.1.7"
progress = "^1.6"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
neo4j = "^5.20.0"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
